Update hutool-core/src/test/java/cn/hutool/core/stream/EntryStreamTest.java
Co-authored-by: ZZemptypoint <1215582715@qq.com>